Dark Mode Bug Fixed

--- a/css/style.css
+++ b/css/style.css
@@ -200,9 +200,11 @@ body {
 
 #menuBtn {
 	position: fixed;
-	left: 2rem;
-	font-size: 5rem;
-	z-index: -1;
+	left: 1.5rem;
+	top: 1rem;
+	/* font-size: 5rem; */
+	width: 4rem;
+	z-index: 53125123532535;
 	transition: all 0.2s ease-in;
 	cursor: pointer;
 	display: none;
@@ -358,6 +360,7 @@ body {
 }
 
 .modeBtn {
+	font-size: 2rem;
 	cursor: pointer;
 }
 
@@ -553,7 +556,7 @@ section {
 
 .hireme::before {
 	content: "";
-	background: url("./bgfree.jpg") no-repeat center center/cover fixed;
+	background: url("../images/bgfree.jpg") no-repeat center center/cover fixed;
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -699,6 +702,11 @@ footer .SocialHandles img {
 @media screen and (max-width: 800px) {
 	#Services {
 		padding: 5% 3%;
+	}
+
+	.modeBtn {
+		font-size: 3rem;
+		cursor: pointer;
 	}
 
 	.row-projects img {
